--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   "description": "Example of basic A-Frame support for the new three.ar.js library and WebARonARKit / WebARonARCore browsers.",
   "main": "server.js",
   "scripts": {
-    "start": "bower install && node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.15.3",
-    "bower": "^1.8.0"
+    "express": "^4.15.3"
   },
   "engines": {
     "node": "8.x"
